# OBRmodel

./: .gitignore  README.md  app.py  pyproject.toml
templates/: base.html  index.html
