[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.2",
    "flask-limiter>=4.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=25.1.0",
    "openai>=1.99.1",
    "psycopg2-binary>=2.9.11",
]
